# IPStatus

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
